--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,20 +4,21 @@
 <head>
 	<meta charset="utf-8">
 	<title>Workshop</title>
+	<link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
 </head>
 <body>
 
 <header>
 	<strong>Patrick</strong>
-	<nav>
-		<ul>
-			<li><a href="{{site.baseurl}}/index.html">Home</a></li>
-			<li><a href="{{site.baseulr}}/about.html">About</a></li>
-		</ul>
-	</nav>
+	{% include nav.html navclass='nav-top' %}
 </header>
 
 {{content}}
+
+<footer>
+	<i>Footer</i>
+	{% include nav.html navclass='nav-bottom' %}
+</footer>
 
 </body>
 </html>
