--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,6 @@
 <body>
 
 <header>
-	<!--<strong>Patrick</strong>-->
 	<br>
 	{% include nav.html navclass='nav-top' %}
 </header>
@@ -23,8 +22,7 @@
 {{content}}
 
 <footer>
-	<!-- <i>Footer</i> -->
-	{% include nav.html navclass='nav-bottom' %}
+	{% include nav.html navclass='nav-top' %}
 </footer>
 
 </body>
