--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,5 +8,11 @@ layout: default
 	<span class="projectplace l">{{page.place}}</span><br>
 	<span class="projectyear l">{{page.year}}</span>
 </div>
+<!--
+<div class="full">
+	<div class="projectheadline">{{page.headline}}</div>
+	<div class="projecttext">{{page.projecttext}}</div>
+</div>
+-->
 
 {{content}}
