--- a/_layouts/stanford.html
+++ b/_layouts/stanford.html
@@ -22,8 +22,8 @@
     <br>
     <div class="left5">
         <a href="{{site.baseurl}}/resume.html" class="{% if page.url contains 'resume' %}rezcurrent{% endif %}"><span class="l">Resume</span></a>
-        <a href="{{site.baseurl}}/narrative.html" class="{% if page.url contains 'narrative' %}rezcurrent{% endif %} left2"><span class="l">Work</span></a>
-        <a href="{{site.baseurl}}/aboutme.html" class="{% if page.url contains 'aboutme' %}rezcurrent{% endif %} left2"><span class="l">About Me</span></a>
+        <a href="{{site.baseurl}}/narrative.html" class="{% if page.url contains 'narrative' %}rezcurrent{% endif %} left2"><span class="l">Worldview</span></a>
+        <a href="{{site.baseurl}}/portfolio.html" class="{% if page.url contains 'portfolio' %}rezcurrent{% endif %} left2"><span class="l">Work</span></a>
     </div>
 </header>
     
@@ -32,8 +32,8 @@
 <footer>
     <div class="left5">
         <a href="{{site.baseurl}}/resume.html" class="{% if page.url contains 'resume' %}rezcurrent{% endif %}"><span class="l">Resume</span></a>
-        <a href="{{site.baseurl}}/narrative.html" class="{% if page.url contains 'narrative' %}rezcurrent{% endif %} left2"><span class="l">Work</span></a>
-        <a href="{{site.baseurl}}/aboutme.html" class="{% if page.url contains 'aboutme' %}rezcurrent{% endif %} left2"><span class="l">About Me</span></a>
+        <a href="{{site.baseurl}}/narrative.html" class="{% if page.url contains 'narrative' %}rezcurrent{% endif %} left2"><span class="l">Worldview</span></a>
+        <a href="{{site.baseurl}}/portfolio.html" class="{% if page.url contains 'portfolio' %}rezcurrent{% endif %} left2"><span class="l">Work</span></a>
     </div>
 </footer>
 
