Added Ripple Effect and changed page names

--- a/css/common.css
+++ b/css/common.css
@@ -474,6 +474,10 @@ I M A G E   B O X E S
     width:40vw;
 }
 
+.w15 {
+    width:15vw;
+}
+
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
