Tweaks and footer fix

--- a/_layouts/stanford.html
+++ b/_layouts/stanford.html
@@ -29,6 +29,7 @@
     
 {{content}}
 
+<div class="white_bg">    
 <footer>
     <div class="left5">
         <a href="{{site.baseurl}}/resume.html" class="{% if page.url contains 'resume' %}rezcurrent{% endif %}"><span class="l">Resume</span></a>
@@ -36,6 +37,7 @@
         <a href="{{site.baseurl}}/portfolio.html" class="{% if page.url contains 'portfolio' %}rezcurrent{% endif %} left2"><span class="l">Portfolio</span></a>
     </div>
 </footer>
+</div>
 
 </body>
 </html>
