--- a/css/common.css
+++ b/css/common.css
@@ -486,8 +486,8 @@ F O O T E R
 */
 
 footer {
-	border-top: 1px solid #eee;
-	margin: 5% 0 5% 0;
+	/*border-top: 1px solid #eee;*/
+	padding: 5% 0 5% 0;
     background-color:white;
 }
 
