New format, new project pages

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,9 @@
 <nav>
 	<ul class="nav l {{include.navclass}}">
 		<li><a href="{{site.baseurl}}/index.html" class="{% if page.url == '/' %}current{% endif %}">Home</a></li>
-		<li><a href="{{site.baseurl}}/about.html" class="{% if page.url == '/ethos.html' %}current{% endif %}">Ethos</a></li>
-		<li><a href="{{site.baseurl}}/projects" class="{% if page.url contains 'projects' %}current{% endif %}">Work</a></li>
-		<li><a href="{{site.baseurl}}/whiteboard.html" class="{% if page.url contains 'whiteboard' or page.url contains 'architecture.html' or page.url contains 'cities' %}current{% endif %}">Whiteboard</a></li>
+		<li><a href="{{site.baseurl}}/about.html" class="{% if page.url == '/about.html' %}current{% endif %}">Ethos</a></li>
+		<li><a href="{{site.baseurl}}/projects/index4.html" class="{% if page.url contains 'projects' %}current{% endif %}">Work</a></li>
+		<li><a href="{{site.baseurl}}/#" class="{% if page.url contains 'whiteboard' or page.url contains 'architecture.html' or page.url contains 'cities' %}current{% endif %}">Whiteboard</a></li>
+        <li><a href="{{site.baseurl}}/port.html" class="{% if page.url contains 'portfolio' %}current{% endif %}">Portfolio</a></li>
 	</ul>
 </nav>
