--- a/css/common.css
+++ b/css/common.css
@@ -18,6 +18,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
+/* Old rule, which I really sort of liked, but it was inconsistent 
 a {
 	text-decoration: none;
 	color: blue;
@@ -26,7 +27,17 @@ a {
 a:hover {
 	border-bottom: 2px solid;
 }
+*/
 
+a {
+    text-decoration: none;
+    color:inherit;
+}
+
+a:hover {
+    opacity:.6;
+    border-bottom:none;
+}
 
 h1 {
 	font-size: 3em; /* 2.5em */
@@ -65,8 +76,10 @@ ul {
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 C O L O R S
 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 .black_bg {
@@ -101,8 +114,10 @@ C O L O R S
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 N A V I G A T I O N 
 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 .current {
@@ -138,8 +153,10 @@ li a {
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-P R O J E C T  L I S T  UL/LI
 
+I N D E X   P R O J E C T   L I S T  UL/LI
+
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 #rocklist {width:auto;}
@@ -162,12 +179,12 @@ P R O J E C T  L I S T  UL/LI
 
 
 
-
-
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 R O C K S
 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 #rocks {width: auto;}
@@ -206,8 +223,10 @@ R O C K S
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-P R O J E C T   P A G E   A N D   L I S T S
 
+P R O J E C T   T Y P E F A C E   T R E A T M E N T S   A N D   L I S T S
+
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 .hometext {
@@ -340,8 +359,10 @@ P R O J E C T   P A G E   A N D   L I S T S
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+
 T E X T   M O D I F I C A T I O N S 
 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 .l {
@@ -359,8 +380,10 @@ T E X T   M O D I F I C A T I O N S
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 V I S U A L S
 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 .fullbleed {
@@ -409,20 +432,62 @@ V I S U A L S
 	margin-left:2%;
 }
 
+.right5 {
+    margin-right:5%;
+}
+
 .bottom5 {
     margin-bottom:5%;
+}
+
+.sat-inv {
+    filter:grayscale(100%) invert(100%);
+}
+
+.sat-inv:hover {
+    filter:grayscale(0%) invert(0%);
+}
+
+/*
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+P R O J E C T   I N D E X   G R I D 
+
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+*/
+
+
+.work_grid_2h {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap:0px;
+}
+
+.work_grid_2h img {
+    height:60vh;
+    display:block;
+    object-fit:cover;
+    vertical-align:top;
+    overflow:hidden;
+    
 }
 
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-I M A G E   B O X E S
 
+I M A G E   L A Y O U T   B O X   G R I D 
+
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
+
+/*
+THIS IS REDUNDANT 
 
 .grid img {
   max-width:100%;
 }
+*/
 
 .grid_2h {
   display: grid;
@@ -478,11 +543,21 @@ I M A G E   B O X E S
     width:15vw;
 }
 
+.block {
+    display:block;
+}
+
+.h100 {
+    height:100vh;
+    object-fit:scale-down;
+}
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 F O O T E R 
 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 footer {
@@ -495,8 +570,10 @@ footer {
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-M O B I L E 
 
+M O B I L E   B R E A K   P O I N T S 
+
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 @media screen and (max-width: 900px) {
@@ -510,12 +587,62 @@ M O B I L E
 }
 
 
+/*
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+C S S   E F F E C T S 
+
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+*/
+
+
+/* Shrink */
+.hvr-shrink {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-shrink:hover, .hvr-shrink:focus, .hvr-shrink:active {
+  -webkit-transform: scale(0.98);
+  transform: scale(0.98);
+}
+
+
+
+
+
+
+
+/*
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+O B S O L E T E 
+
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+*/
+
+
+
+
+
+
+
+
+
+
 
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 R O C K S 2  —  O R I G I N A L
 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 #rocks2 {
@@ -570,8 +697,10 @@ R O C K S 2  —  O R I G I N A L
 
 /* 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
 R O C K S  —  A L T  —  A S   S E E N   I N   I N D E X  3  .H T M L 
 
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 */
 
 
