--- a/css/rez.css
+++ b/css/rez.css
@@ -290,8 +290,18 @@
 background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(224,247,250,1) 100%);
 }
 
+.t0b {
+    background: rgb(255,255,255);
+background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(224,247,250,1) 100%);
+}
+
 .t1 {
     height:200vh;
+    background: rgb(224,247,250);
+background: linear-gradient(180deg, rgba(224,247,250,1) 0%, rgba(255,253,231,1) 100%);
+}
+
+.t1b {
     background: rgb(224,247,250);
 background: linear-gradient(180deg, rgba(224,247,250,1) 0%, rgba(255,253,231,1) 100%);
 }
