initial responsive grid changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" name="viewport" content="width=device-width">
 	<title>Workshop</title>
 	<!--<link href="{{site.baseurl}}/css/normalise.css" rel="stylesheet">-->
 	<link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
