--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 	<!--<link href="{{site.baseurl}}/css/normalise.css" rel="stylesheet">-->
 	<link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
     <link href="{{site.baseurl}}/css/rez.css" rel="stylesheet">
+    <link href="{{site.baseurl}}/css/responsive.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:200,300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
