--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 		<li><a href="{{site.baseurl}}/index.html" class="{% if page.url == '/' %}current{% endif %}">Home</a></li>
 		<li><a href="{{site.baseurl}}/about.html" class="{% if page.url == '/about.html' %}current{% endif %}">Ethos</a></li>
 		<li><a href="{{site.baseurl}}/projects/index4.html" class="{% if page.url contains 'projects' %}current{% endif %}">Work</a></li>
-		<li><a href="{{site.baseurl}}/#" class="{% if page.url contains 'whiteboard' or page.url contains 'architecture.html' or page.url contains 'cities' %}current{% endif %}">Whiteboard</a></li>
+		<!--<li><a href="{{site.baseurl}}/#" class="{% if page.url contains 'whiteboard' or page.url contains 'architecture.html' or page.url contains 'cities' %}current{% endif %}">Whiteboard</a></li>-->
         <li><a href="{{site.baseurl}}/port.html" class="{% if page.url contains 'portfolio' %}current{% endif %}">Portfolio</a></li>
 	</ul>
 </nav>
