--- a/css/rez.css
+++ b/css/rez.css
@@ -366,3 +366,9 @@ background: linear-gradient(180deg, rgba(255,235,238,1) 0%, rgba(249,251,231,1) 
     background: rgb(255,235,238);
 background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(249,251,231,1) 100%);
 }
+
+.t5 {
+    height:100vh;
+    background: rgb(255,255,255);
+    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, #f7f7f7 100%);
+}
